--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     /*justify-content: center;*/
 
     border: 5px solid black;
-    height: 400px;
+    height: 500px;
     width: 70%;
 }
 
@@ -37,14 +37,16 @@
     padding-left: 30px;
 }
 
-.results {
+#results {
     padding-top: 200px;
     height: 100px;
     text-align: center;
+
 }
 
 .selected {
     transform: scale(1.5);
+    transition: all .75s ease;
     background-color: lime;
     border-color: #FF00FF;
     box-shadow: 0 0 1rem #FF00FF;
